:bug: fix margin jumping on validation

--- a/src/components/registerDelegate/steps/choose/choose.css
+++ b/src/components/registerDelegate/steps/choose/choose.css
@@ -7,7 +7,7 @@
 
 .delegateNameInput {
   padding: 0 var(--input-horizontal-padding);
-  margin-bottom: 111px;
+  margin-bottom: 110px;
 
   & > input[type='text'] {
     font-size: 32px;
